<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brighter_blue"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/tv_recipe_title"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recipe_instruction_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/list_of_recipes_background"
        android:gravity="center"
        android:stretchMode="spacingWidthUniform" />
</LinearLayout>