<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".VideoActivity"
    android:background="@android:color/black">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/exoplayer_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true" />

</FrameLayout>