<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_list_of_recipes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListOfRecipesActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recipe_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:stretchMode="spacingWidthUniform"
        android:background="@color/list_of_recipes_background"/>

    <ProgressBar
        android:id="@+id/pb_view"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_error_main_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error"
        tools:text="@string/error" />

</RelativeLayout>